--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "rxjs": "^7.8.1",
     "twilio": "^4.19.0",
     "typeorm": "^0.3.17",
-    "typeorm-naming-strategies": "^4.1.0"
+    "typeorm-naming-strategies": "^4.1.0",
+    "web3": "^4.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
