--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@prisma/client": "^5.5.2",
     "@types/big.js": "^6.2.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
@@ -59,6 +60,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.3",
+    "prisma": "^5.5.2",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
