--- a/package.json
+++ b/package.json
@@ -22,18 +22,28 @@
     "m:gen:dev": "npm run orm:init migration:generate",
     "m:run:dev": "npm run orm:init migration:run",
     "m:gen": "npm run orm:init migration:generate",
-    "m:run": "npm run orm:init migration:run"
+    "m:run": "npm run orm:init migration:run",
+    "prisma:dev:deploy": "prisma migrate deploy",
+    "db:dev:rm": "docker-compose rm -s -f -v billete_pg",
+    "db:dev:up": "docker-compose up -d billete_pg",
+    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && sleep 1 && npm run prisma:dev:deploy"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "argon2": "^0.31.2",
     "big.js": "^6.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -52,6 +62,8 @@
     "@types/jest": "^29.5.2",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^3.0.12",
+    "@types/passport-local": "^1.0.37",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
