--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prisma:dev:deploy": "prisma migrate deploy",
     "db:dev:rm": "docker-compose rm -s -f -v billete_pg",
     "db:dev:up": "docker-compose up -d billete_pg",
-    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && sleep 1 && npm run prisma:dev:deploy"
+    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && npm run prisma:dev:deploy"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
