--- a/src/networks/subgraphs/mainnet-1.yaml
+++ b/src/networks/subgraphs/mainnet-1.yaml
@@ -13,7 +13,7 @@ dataSources:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
-      file: ./src/networks/subgraphs/mapping.ts
+      file: ./mapping.ts
       entities:
         - Transfer
       abis:
