--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/typeorm": "^10.0.0",
     "argon2": "^0.31.2",
     "big.js": "^6.2.1",
+    "bitcore-lib": "^10.0.17",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "morgan": "^1.10.0",
@@ -62,6 +63,7 @@
     "@nestjs/testing": "^10.0.0",
     "@prisma/client": "^5.5.2",
     "@types/big.js": "^6.2.1",
+    "@types/bitcore-lib": "^0.15.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/morgan": "^1.9.7",
