--- a/package.json
+++ b/package.json
@@ -40,11 +40,17 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/bitcoinjs-lib": "^5.0.0",
     "argon2": "^0.31.2",
     "big.js": "^6.2.1",
+    "bitcoinjs-lib": "^6.1.5",
     "bitcore-lib": "^10.0.17",
+    "bitcore-lib-ltc": "^10.0.17",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "coininfo": "^5.2.1",
+    "ecpair": "^2.1.0",
+    "ltc-bitcoinjs-lib": "^3.3.10",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -52,6 +58,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "tiny-secp256k1": "^2.2.3",
     "twilio": "^4.19.0",
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0",
