--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": "18.16.1"
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -42,8 +45,11 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/throttler": "^5.0.1",
     "@nestjs/typeorm": "^10.0.0",
+    "@truffle/hdwallet-provider": "^2.1.15",
     "@types/bitcoinjs-lib": "^5.0.0",
+    "app-root-path": "^3.1.0",
     "argon2": "^0.31.2",
     "big.js": "^6.2.1",
     "bitcoinjs-lib": "^6.1.5",
@@ -52,7 +58,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "coininfo": "^5.2.1",
+    "connect-redis": "^7.1.0",
     "ecpair": "^2.1.0",
+    "express-session": "^1.17.3",
+    "ioredis": "^5.3.2",
     "ltc-bitcoinjs-lib": "^3.3.10",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
@@ -62,7 +71,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "tiny-secp256k1": "^2.2.3",
-    "twilio": "^4.19.0",
+    "twilio": "^3.40.0",
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0",
     "web3": "^4.2.1"
@@ -75,6 +84,7 @@
     "@types/big.js": "^6.2.1",
     "@types/bitcore-lib": "^0.15.6",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.10",
     "@types/jest": "^29.5.2",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.3.1",
