--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "dependencies": {
     "@graphprotocol/graph-ts": "^0.31.0",
+    "@nestjs/bull": "^10.0.1",
+    "@nestjs/bullmq": "^10.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -56,6 +58,7 @@
     "bitcoinjs-lib": "^6.1.5",
     "bitcore-lib": "^10.0.17",
     "bitcore-lib-ltc": "^10.0.17",
+    "bullmq": "^4.13.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "coininfo": "^5.2.1",
