--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@truffle/contract": "^4.6.31",
     "@truffle/hdwallet-provider": "^2.1.15",
     "@types/bitcoinjs-lib": "^5.0.0",
+    "alchemy-sdk": "^3.0.0",
     "app-root-path": "^3.1.0",
     "argon2": "^0.31.2",
     "big.js": "^6.2.1",
@@ -64,6 +65,7 @@
     "coininfo": "^5.2.1",
     "connect-redis": "^7.1.0",
     "ecpair": "^2.1.0",
+    "ethers": "^6.9.0",
     "express-session": "^1.17.3",
     "ioredis": "^5.3.2",
     "ltc-bitcoinjs-lib": "^3.3.10",
