--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "twilio": "^3.40.0",
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0",
+    "uuid": "^9.0.1",
     "web3": "^4.2.1"
   },
   "devDependencies": {
@@ -97,6 +98,7 @@
     "@types/passport-jwt": "^3.0.12",
     "@types/passport-local": "^1.0.37",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.52.0",
