--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "bitcore-lib": "^10.0.17",
     "bitcore-lib-ltc": "^10.0.17",
     "bullmq": "^4.13.3",
+    "ccxt": "^4.1.81",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "coininfo": "^5.2.1",
