--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "app-root-path": "^3.1.0",
     "argon2": "^0.31.2",
     "big.js": "^6.2.1",
+    "bignumber.js": "^9.0.1",
     "bitcoinjs-lib": "^6.1.5",
     "bitcore-lib": "^10.0.17",
     "bitcore-lib-ltc": "^10.0.17",
