--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "deploy:subgraph:mainnet-1": "graph deploy --studio mainnet-1 C:\\Users\\lsper\\Desktop\\Backend\\billete\\src\\networks\\subgraphs\\mainnet-1.yaml"
   },
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.470.0",
     "@graphprotocol/graph-ts": "^0.31.0",
     "@nestjs/bull": "^10.0.1",
     "@nestjs/bullmq": "^10.0.1",
@@ -73,6 +74,7 @@
     "ltc-bitcoinjs-lib": "^3.3.10",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
