--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "alchemy-sdk": "^3.0.0",
     "app-root-path": "^3.1.0",
     "argon2": "^0.31.2",
+    "axios": "^1.6.2",
     "big.js": "^6.2.1",
     "bignumber.js": "^9.0.1",
+    "bitcoin-core": "^4.1.0",
     "bitcoinjs-lib": "^6.1.5",
     "bitcore-lib": "^10.0.17",
     "bitcore-lib-ltc": "^10.0.17",
