--- a/src/networks/subgraphs/goerli-5.yaml
+++ b/src/networks/subgraphs/goerli-5.yaml
@@ -1,26 +1,23 @@
-
-      specVersion: 0.0.2
-      description: Subgraph for goerli
-      schema:
-        file: ./schema.graphql
-      dataSources: 
-      - kind: ethereum/contract
-        name: ERC20Token
-        network: goerli
-        source:
-          address: "0x52C3f2eFF1A67dBB7097C3DCb3dF844be486b65d"
-          abi: ERC20
-        mapping:
-          kind: ethereum/events
-          apiVersion: 0.0.5
-          language: wasm/assemblyscript
-          entities:
-            - Transfer
-          abis:
-            - name: ERC20
-              file: ./abis/ERC20.json
-          eventHandlers:
-            - event: Transfer(address,address,uint256)
-              handler: handleTransfer
-    
-    
+specVersion: 0.0.4
+description: Subgraph for goerli
+schema:
+  file: ./schema.graphql
+dataSources:
+  - kind: ethereum/contract
+    name: ERC20Token
+    network: goerli
+    source:
+      address: '0xcFBa2EdFb93C775F42E9bD007D29dd2E88E37cD6'
+      abi: ERC20
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - Transfer
+      abis:
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Transfer(address,address,uint256)
+          handler: handleTransfer
