--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.0",
     "@nestjs/throttler": "^5.0.1",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.3.0",
     "@truffle/contract": "^4.6.31",
     "@truffle/hdwallet-provider": "^2.1.15",
     "@types/bitcoinjs-lib": "^5.0.0",
@@ -86,7 +88,8 @@
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0",
     "uuid": "^9.0.1",
-    "web3": "^4.2.1"
+    "web3": "^4.2.1",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
