--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "express-session": "^1.17.3",
     "ioredis": "^5.3.2",
     "ltc-bitcoinjs-lib": "^3.3.10",
+    "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
