--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "ioredis": "^5.3.2",
     "ltc-bitcoinjs-lib": "^3.3.10",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.44",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
