--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.8",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
