--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@types/jest": "^29.5.2",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport-jwt": "^3.0.12",
     "@types/passport-local": "^1.0.37",
     "@types/supertest": "^2.0.12",
