--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "ecpair": "^2.1.0",
     "ethers": "^6.9.0",
     "express-session": "^1.17.3",
+    "handlebars": "^4.7.8",
     "ioredis": "^5.3.2",
     "ltc-bitcoinjs-lib": "^3.3.10",
     "moment": "^2.30.1",
