--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.0",
+    "@nestjs/serve-static": "^4.0.1",
     "@nestjs/throttler": "^5.0.1",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.3.0",
