--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: '3.1'
 
 services:
+  billete_backend:
+    build: .
+    ports:
+      - '3000:3000'
+    depends_on:
+      - billete_pg
+      - billete_redis
+    environment:
+      NODE_ENV: production
   billete_pg:
     image: postgres:15.1
     container_name: billete_pg
