--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node": "18.16.1"
   },
   "scripts": {
-    "build": "nest build",
+    "prisma:generate": "prisma generate",
+    "build": "npm run prisma:generate && nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
