--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,79 @@
-version: '3.1'
+version: '3.8'
 
 services:
   billete_pg:
     image: postgres:15.1
     container_name: billete_pg
-    restart: always
     environment:
       POSTGRES_DB: billete
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: root
     volumes:
+      - pgdata:/var/lib/postgresql/data
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
-      - 5432:5432
+      - '5432:5432'
     networks:
       - billete
+
   billete_redis:
     image: redis:alpine
     container_name: billete_redis
     restart: always
     ports:
-      - 6379:6379
+      - '6379:6379'
     volumes:
-      - ./redis/data:/data
+      - redisdata:/data
     networks:
       - billete
+
+  billete:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        APP_NAME: billete
+    environment:
+      DB_HOST: billete_pg
+      REDIS_HOST: billete_redis
+    depends_on:
+      - billete_pg
+      - billete_redis
+    ports:
+      - '3000:3000'
+    networks:
+      - billete
+
+  crypto_data:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        APP_NAME: crypto-data
+    depends_on:
+      - billete
+    ports:
+      - '3002:3002'
+    networks:
+      - billete
+
+  redis_service:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        APP_NAME: redis
+    depends_on:
+      - billete_redis
+    ports:
+      - '3003:3003'
+    networks:
+      - billete
+
 networks:
   billete:
     driver: bridge
+
+volumes:
+  pgdata:
+  redisdata:
