--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
     "morgan": "^1.10.0",
+    "node-forge": "^1.3.1",
     "nodemailer": "^6.9.8",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
@@ -111,6 +112,7 @@
     "@types/jest": "^29.5.2",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.3.1",
+    "@types/node-forge": "^1.3.11",
     "@types/nodemailer": "^6.4.14",
     "@types/passport-jwt": "^3.0.12",
     "@types/passport-local": "^1.0.37",
