--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "solidity.compileUsingRemoteVersion": "v0.8.20+commit.a1b79de6"
+  "solidity.compileUsingRemoteVersion": "v0.8.20+commit.a1b79de6",
+  "Codegeex.Comment.LanguagePreference": "English",
+  "Codegeex.Chat.LanguagePreference": "English",
+  "Codegeex.SidebarUI.LanguagePreference": "English"
 }
