--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/microservices": "^10.3.0",
     "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.8",
     "@nestjs/platform-socket.io": "^10.3.0",
     "@nestjs/serve-static": "^4.0.1",
     "@nestjs/throttler": "^5.0.1",
@@ -83,6 +83,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-forge": "^1.3.1",
     "nodemailer": "^6.9.8",
     "passport": "^0.6.0",
@@ -96,6 +97,7 @@
     "twilio": "^3.40.0",
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0",
+    "utf8": "^3.0.0",
     "uuid": "^9.0.1",
     "web3": "^4.2.1",
     "ws": "^8.16.0"
@@ -111,12 +113,14 @@
     "@types/express-session": "^1.17.10",
     "@types/jest": "^29.5.2",
     "@types/morgan": "^1.9.7",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/node-forge": "^1.3.11",
     "@types/nodemailer": "^6.4.14",
     "@types/passport-jwt": "^3.0.12",
     "@types/passport-local": "^1.0.37",
     "@types/supertest": "^2.0.12",
+    "@types/utf8": "^3.0.3",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
